# Optimization

./: .gitignore  Build.ps1  CMakeLists.txt  README.md
FunctionClasses/: BinaryOperation.cpp  CMakeLists.txt  Constant.cpp  Function.cpp  GetVariable.cpp  Lexer.cpp  ParsedFunction.cpp  Parser.cpp  Token.cpp  UnaryOperation.cpp
FunctionClasses/Headers/: Function.h  ParsedFunction.h  Parser.h
FunctionClasses/PrivateHeaders/: BinaryOperation.h  Constant.h  GetVariable.h  Lexer.h  Token.h  UnaryOperation.h
L1/: CMakeLists.txt  L1.cpp
L2/: CMakeLists.txt  L2.cpp
L3/: CMakeLists.txt  L3.cpp
L4/: CMakeLists.txt  L4.cpp
L5Console/: CMakeLists.txt  L5.cpp
Optimization/: CMakeLists.txt  Methods.cpp  Utilities.cpp
Optimization/Headers/: Methods.h  OptimizationFunctionTypes.h  Utilities.h
OptimizationClasses/: CMakeLists.txt  Derivate.cpp  Gradient.cpp  MinimizationMethod.cpp  Partan.cpp  Vector.cpp
OptimizationClasses/Headers/: Derivate.h  Gradient.h  MinimizationMethod.h  Partan.h  Vector.h
TestFunctions/: CMakeLists.txt  Counters.cpp  TestFunctions1.cpp  TestFunctions2.cpp  TestFunctions3.cpp
TestFunctions/Headers/: Counters.h  TestFunctions1.h  TestFunctions2.h  TestFunctions3.h
