CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
PROJECT(OptimizationV3)

SET(PUBLIC_HEADERS_DIR Headers)
SET(PRIVATE_HEADERS_DIR PrivateHeaders)

ADD_SUBDIRECTORY(Optimization)
ADD_SUBDIRECTORY(TestFunctions)
ADD_SUBDIRECTORY(L1)
ADD_SUBDIRECTORY(L2)
ADD_SUBDIRECTORY(L3)
ADD_SUBDIRECTORY(L4)
ADD_SUBDIRECTORY(OptimizationClasses)
ADD_SUBDIRECTORY(FunctionClasses)
ADD_SUBDIRECTORY(L5Console)