PROJECT(FunctionClasses)

FILE(GLOB HEADERS ${PUBLIC_HEADERS_DIR}/*.h)
FILE(GLOB PRIVATE_HEADERS ${PRIVATE_HEADERS_DIR}/*.h)
FILE(GLOB SOURCE *.cpp)

ADD_LIBRARY(FunctionClasses STATIC ${SOURCE} ${HEADERS} ${PRIVATE_HEADERS})

TARGET_INCLUDE_DIRECTORIES(FunctionClasses PRIVATE ${PRIVATE_HEADERS_DIR} /)
TARGET_INCLUDE_DIRECTORIES(FunctionClasses PUBLIC ${PUBLIC_HEADERS_DIR})
