PROJECT(TestFunctions)

FILE(GLOB HEADERS ${PUBLIC_HEADERS_DIR}/*.h)
FILE(GLOB SOURCE *.cpp)

ADD_LIBRARY(TestFunctions STATIC ${SOURCE} ${HEADERS})

ADD_DEPENDENCIES(TestFunctions Optimization)

TARGET_LINK_LIBRARIES(TestFunctions PUBLIC Optimization)

TARGET_INCLUDE_DIRECTORIES(TestFunctions PRIVATE /)
TARGET_INCLUDE_DIRECTORIES(TestFunctions PUBLIC ${PUBLIC_HEADERS_DIR})
